* Fixed a bug in WhiteboxImpl#findUniqueConstructorOrThrowException which caused an additional constructor to be found a class was prepared for test (issue 189).
* Fixed the maven assembly so that it now produces two full jar files, one for Mockito and one for EasyMock. These contains the sources as well.
* Upgraded the Mockito extension API to support Mockito 1.8.1-rc1

Change log 1.3.1 (released 2009-10-28)
--------------------------------------
* Critial bug resolved in the PowerMock JUnit 4.7 runner: Before tests would not be executed at all if a JUnit rule was used in the test (even though it looked like they were). This has now been resolved an thus support for JUnit 4.7 rules should _really_ work.
* DeepCloner now supports cloning of one dimensional arrays, primitives, enums and collections.
* Test case is now always prepared for test even if no @PrepareForTest annotation is specified
* Fixed a bug in Whitebox#setInternalState so that it now works to supply an array when specifying a method name again.
* Improved javadoc in Whitebox class
* Upgraded EasyMock extension API to depend on EasyMock 2.5.2 (EasyMock class extensions are still version 2.4 since that's the latest release right now).

Change log 1.3 (released 2009-10-06)
------------------------------------
* Classes that will have their static initializers suppressed are automatically added to prepare for test in mock policies.
* Added a toString implementation for TestMethodResultImpl
* Added a toString implementation for TestSuiteResultImpl
* suppressMethod(Class...classes) now takes a class and additional classes as var args (i.e. suppressMethod(Class cls, Class...classes). This makes it easier to suppress all methods of a particular class for only one class.
* Invoking reflection methods now works again. This failed in version 1.2 and 1.2.5 when PowerMock begun supporting mocking of system classes. E.g. MyClass.class.getClassloader() now works again even if MyClass is prepared for test.